# comp_ling_assignment

./: .gitignore  .pre-commit-config.yaml  compling26_assignment.ipynb  pyproject.toml  requirements.txt
data/: raw-c.csv
data/processed/: raw_c_sentence_split.csv  with_embs.pkl
data/stims/: stimuli.csv
