[project]
name = "comp-ling-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
